Fix alignment of game logo on teams page

--- a/streamfinder/static/style.scss
+++ b/streamfinder/static/style.scss
@@ -103,9 +103,6 @@ $padding: 10px;
 }
 
 #team {
-	img.game-logo {
-		margin-bottom: -3px;
-	}
 	img.external-link {
 		margin-top: -3px;
 	}
